# image-zoom

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat
include/glad/: glad.h
src/: glad.c  main.cpp
